# semolina

./: .cliff.toml  .cubano.toml.example  .gitignore  .pre-commit-config.yaml  .semolina.toml.example  CLAUDE.md  DEVELOP.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.claude/skills/cubano-docs-author/: SKILL.md
.claude/skills/semolina-docs-author/: SKILL.md
.doc-writer/: config.yaml  context.md  editor-report.md  gap-report.md  page-inventory.md  persona-report-data-engineers-exposing-semantic-layers-via-apis.md  persona-report-data-engineers.md  persona-report-python-web-developers-building-analytics-backends.md  persona-report-python-web-developers.md  rules.md  scenarios.yaml  sphinx-shibuya.md  terminology.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pr.yml  release.yml  tests.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.1-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/resolved/: codegen-import-ordering-isort.md  metric-init-multiple-values-source.md  uat-gaps-3-4-5-doc-content.md
.planning/milestones/: v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md  v0.2-MILESTONE-AUDIT.md  v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md  v0.3-MILESTONE-AUDIT.md  v0.3-REQUIREMENTS.md  v0.3-ROADMAP.md  v0.4.0-MILESTONE-AUDIT.md  v0.4.0-REQUIREMENTS.md  v0.4.0-ROADMAP.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-model-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-query-builder/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-sql-generation-mock-backend/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-execution-results/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-PLAN.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-snowflake-backend/: 05-01-PLAN.md
.planning/phases/06-databricks-backend/: 06-01-PLAN.md  06-02-PLAN.md  06-RESEARCH.md
.planning/phases/07-packaging/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-03-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md  api-validation.txt  install-test-core.txt  install-test-extras.txt  twine-check.txt
.planning/phases/07.1-ci-cd-setup-with-github-actions/: 07.1-01-SUMMARY.md  07.1-03-SUMMARY.md  07.1-04-SUMMARY.md
.planning/phases/08-integration-testing/: 08-02-PLAN.md  08-03-PLAN.md  08-04-SUMMARY.md  08-CONTEXT.md
.planning/phases/09-codegen-cli/: .continue-here.md  09-01-SUMMARY.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-documentation/: 10-01-SUMMARY.md  10-02-PLAN.md  10-03-PLAN.md  10-CONTEXT.md  10-RESEARCH.md  10-UAT.md
.planning/phases/10.1-refactor-query-interface-to-model-centric/: 10.1-01-PLAN.md  10.1-02-SUMMARY.md  10.1-03-PLAN.md  10.1-03-SUMMARY.md  10.1-04-PLAN.md  10.1-05-PLAN.md  10.1-05-SUMMARY.md  10.1-07-SUMMARY.md  10.1-08-SUMMARY.md  10.1-RESEARCH.md
.planning/phases/11-ci-example-updates/: 11-01-SUMMARY.md  11-02-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md
.planning/phases/12-warehouse-testing-syrupy/: .continue-here.md  12-01-PLAN.md  12-01-SUMMARY.md  12-03-PLAN.md  12-CONTEXT.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/phases/13-docs-accuracy-verification/: 13-01-SUMMARY.md  13-02-PLAN.md  13-03-PLAN.md  13-03-SUMMARY.md  13-04-PLAN.md  13-04-SUMMARY.md  13-CONTEXT.md  13-RESEARCH.md
.planning/phases/13.1-implement-filter-lookup-system-and-where-clause-compiler/: 13.1-02-PLAN.md  13.1-03-SUMMARY.md  13.1-04-PLAN.md  13.1-04-SUMMARY.md  13.1-05-SUMMARY.md  13.1-UAT.md  13.1-VERIFICATION.md
.planning/phases/14-documentation-overhaul/: 14-01-PLAN.md  14-02-PLAN.md  14-03-SUMMARY.md  14-04-PLAN.md  14-05-PLAN.md  14-05-SUMMARY.md  14-CONTEXT.md  14-RESEARCH.md
.planning/phases/15-doc-accuracy-tracking-cleanup/: 15-01-PLAN.md  15-02-PLAN.md  15-02-SUMMARY.md  15-03-PLAN.md  15-RESEARCH.md
.planning/phases/16-doc-accuracy-and-jaffle-shop-test-fix/: 16-01-PLAN.md  16-01-SUMMARY.md  16-01-VERIFICATION.md  16-RESEARCH.md
.planning/phases/17-nice-repr-for-public-api-classes/: 17-UAT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  CONVENTIONS.md  FEATURES.md  MODEL_QUERY_INTERFACE_RESEARCH.md  PITFALLS.md  STACK.md  SUMMARY.md
.playwright-cli/: page-2026-02-17T13-48-52-516Z.yml
_ideas/: arrow-flight-browser-transport.md  filter-api-design.md
cubano-jaffle-shop/: README.md
cubano-jaffle-shop/tests/: conftest.py  test_warehouse_queries.py
dbt-jaffle-shop/: README.md  pyproject.toml  requirements.in  requirements.txt
docs/scripts/: gen_ref_pages.py
docs/src/: conf.py  index.md  index.rst
semolina-jaffle-shop/: README.md  pyproject.toml
semolina-jaffle-shop/src/semolina_jaffle_shop/: __init__.py  jaffle_models.py  test_models.py
semolina-jaffle-shop/tests/: conftest.py  test_mock_queries.py  test_warehouse_queries.py
semolina-jaffle-shop/tests/fixtures/: __init__.py  mock_data.py
src/cubano/: __init__.py  conftest.py  fields.py  filters.py  models.py  query.py  registry.py  results.py
src/django_semantic_layer/: __init__.py
src/semolina/: __init__.py  __main__.py  config.py  conftest.py  cursor.py  dialect.py  fields.py  filters.py  models.py  pool.py  query.py  registry.py  results.py
tests/: conftest.py  models.py  test_databricks_engine.py  test_engines.py  test_fields.py  test_filters.py  test_models.py  test_query.py  test_registry.py  test_results.py  test_snowflake_engine.py  test_sql.py
tests/integration/: conftest.py  test_queries.py
tests/unit/: test_config.py  test_credentials.py  test_cursor.py  test_databricks_engine.py  test_dialect.py  test_duckdb_engine.py  test_engines.py  test_fields.py  test_filters.py  test_models.py  test_pool.py  test_query.py  test_registry.py  test_results.py  test_snowflake_engine.py  test_sql.py
(+400 files in other folders)
