[project]
name = "cubano"
version = "0.1.0"
description = "A Pythonic ORM for querying data warehouse semantic views (Snowflake, Databricks)"
readme = "README.md"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
databricks = [
    "databricks-sql-connector[pyarrow]>=4.2.5",
]
snowflake = [
    "snowflake-connector-python>=4.3.0",
]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"
