[project]
name = "cubano"
version = "0.1.0"
description = "A Pythonic ORM for querying data warehouse semantic views (Snowflake, Databricks)"
readme = "README.md"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
databricks = [
    "databricks-sql-connector[pyarrow]>=4.2.5",
]
snowflake = [
    "snowflake-connector-python>=4.3.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ipython>=9.10.0",
    "pdbpp>=0.12.0.post1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.1",
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
# Tests legitimately access private members (_metrics, _fields, etc.) for validation
reportPrivateUsage = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "D"]
ignore = [
    "D1",    # don't require docstrings everywhere
    "D202",  # allow blank line after docstring (common in tests)
    "D203",  # conflicts with D211 (no blank line before class docstring)
    "D212",  # conflicts with D213 (multiline summary on second line)
    "D401",  # imperative mood is awkward for dunder methods
    "D413",  # blank line after last section not required
]
