[project]
name = "semolina"
version = "0.1.0"
description = "A Pythonic ORM for querying data warehouse semantic views (Snowflake, Databricks)"
readme = "README.md"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
semolina = "semolina.cli:app"

[project.urls]
Homepage = "https://github.com/anentropic/semolina"
Documentation = "https://anentropic.github.io/semolina/"
Repository = "https://github.com/anentropic/semolina"
Issues = "https://github.com/anentropic/semolina/issues"
Changelog = "https://anentropic.github.io/semolina/changelog/"

[project.optional-dependencies]
databricks = [
    "databricks-sql-connector[pyarrow]>=4.2.5",
]
snowflake = [
    "snowflake-connector-python>=4.3.0",
]
all = [
    "semolina[snowflake,databricks]",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ipython>=9.10.0",
    "pdbpp>=0.12.0.post1",
    "pydantic-settings>=2.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.15.1",
    "syrupy>=5.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
# Tests legitimately access private members (_metrics, _fields, etc.) for validation
reportPrivateUsage = false
# Field.__eq__ and __ne__ intentionally return Q objects instead of bool for query DSL
reportIncompatibleMethodOverride = false
# Field, Metric, Dimension, Fact are Generic[T] descriptors. Unsubscripted usage (e.g.
# revenue = Metric()) is valid when the type parameter is irrelevant to the usage context
# (tests, doctests, example models). Python 3.13 TypeVar defaults (PEP 696) would resolve
# this at the language level; for 3.11/3.12 we suppress the cascade of Unknown errors.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# Lambda parameters in MagicMock.side_effect can't be annotated without wrapper function
reportUnknownLambdaType = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "D"]
ignore = [
    "D1",    # don't require docstrings everywhere
    "D202",  # allow blank line after docstring (common in tests)
    "D203",  # conflicts with D211 (no blank line before class docstring)
    "D212",  # conflicts with D213 (multiline summary on second line)
    "D401",  # imperative mood is awkward for dunder methods
    "D413",  # blank line after last section not required
]

[tool.uv.workspace]
members = ["semolina-jaffle-shop"]

[tool.uv.sources]
semolina = { workspace = true }

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--snapshot-warn-unused",
]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
testpaths = ["tests", "src"]
filterwarnings = [
    "ignore::DeprecationWarning:syrupy.*",
    "ignore:Field name .schema. in.*shadows an attribute in parent:UserWarning",
]
markers = [
    "mock: Fast tests using MockEngine (no warehouse required)",
    "unit: Pure unit tests with no external dependencies",
    "warehouse: Integration tests against real warehouse (requires credentials)",
    "snowflake: Snowflake-specific warehouse tests",
    "databricks: Databricks-specific warehouse tests",
]
